--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@mui/material": "^5.14.3",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
-    "crypto-js": "^4.1.1",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
@@ -25,7 +26,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.1.1",
+    "@types/md5": "^2.3.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
